--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     },
     "dependencies": {
         "loglevel": "^1.6.1",
-        "md5.js": "^1.3.5"
+        "md5.js": "^1.3.5",
+        "ts-loader": "^6.2.0",
+        "typescript": "^3.6.4"
     }
 }
