--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
     "main": "src/main.js",
     "module": "dist/pg.js",
     "devDependencies": {
+        "@types/mocha": "^5.2.7",
+        "mocha": "^6.2.2",
+        "ts-node": "^8.4.1",
         "webpack": "^4.41.2",
         "webpack-cli": "^3.3.9"
     },
