--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "devDependencies": {
         "@types/mocha": "^5.2.7",
         "mocha": "^6.2.2",
+        "sinon": "^7.5.0",
         "ts-node": "^8.4.1",
         "webpack": "^4.41.2",
         "webpack-cli": "^3.3.9"
