--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "main": "src/main.js",
-    "module": "dist/pg.js",
+    "main": "dist/index.js",
+    "types": "dist/index.d.ts",
     "devDependencies": {
         "@types/mocha": "^5.2.7",
         "mocha": "^6.2.2",
