--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
         "@types/mocha": "^5.2.7",
         "mocha": "^6.2.2",
         "sinon": "^7.5.0",
+        "ts-loader": "^6.2.0",
         "ts-node": "^8.4.1",
+        "typescript": "^3.6.4",
         "webpack": "^4.41.2",
-        "webpack-cli": "^3.3.9"
+        "webpack-cli": "^3.3.10"
     },
     "dependencies": {
         "loglevel": "^1.6.1",
-        "md5.js": "^1.3.5",
-        "ts-loader": "^6.2.0",
-        "typescript": "^3.6.4"
+        "md5.js": "^1.3.5"
     }
 }
